# alertify

./: Cargo.toml  README.md  flake.nix
src/: actions.rs  cli.rs  main.rs  notification.rs  pomodoro.rs
src/icons/: action.rs  animation.rs  application.rs  category.rs  device.rs  emblem.rs  emotion.rs  international.rs  mime.rs  mod.rs  place.rs  status.rs  types.rs  utils.rs
