[package]
name = "alertify"
version = "0.1.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com>"]
description = "A simple command-line tool to send desktop notifications using D-Bus."
license = "MIT"
repository = "https://github.com/santoshxshrestha/alertify"
homepage = "https://github.com/santoshxshrestha/alertify"
documentation = "https://github.com/santoshxshrestha/alertify/#readme"
readme = "README.md"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["full"] }
zbus = "5.13.2"
